tests/fail_compile/derive_missing_attrs.rs
use propagate::Propagate;

#[derive(Propagate)]
enum MyEnum {
    A,
    B,
}

fn main() {}
