tests/fail_compile/derive_missing_attrs.stderr
error: Enum must contain at least one `#[good]` or `#[bad]` attribute. Did you forget to mark a good or bad variant?
 --> tests/fail_compile/derive_missing_attrs.rs:3:10
  |
3 | #[derive(Propagate)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `Propagate` (in Nightly builds, run with -Z macro-backtrace for more info)
